# student-ai-grading-system

./: .gitignore  .vercelignore  render.yaml
Chapter04/: ch4_1.aia  ch4_2_2.aia  ch4_2_2_old.aia  ch4_3_2.aia  ch4_3_2_old.aia  ch4_4_2.aia  ch4_4_2_old.aia
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  activities.py  assignments.py  auth.py  reports.py  submissions.py  teacher.py  ws.py
backend/app/core/: config.py  database.py  rate_limit.py  websocket_hub.py
backend/app/models/: __init__.py  activity.py  assignment.py  audit.py  evaluation.py  submission.py  user.py
backend/app/schemas/: __init__.py  activity.py  assignment.py  auth.py  evaluation.py  review.py  submission.py
backend/app/services/: __init__.py  auth_service.py  evaluation_record_service.py  evaluation_service.py  llm_service.py  report_service.py  review_service.py  rule_engine.py  xml_parser.py  xml_validator.py
backend/tests/: test_activity_api.py  test_assignment_api.py  test_auth_api.py  test_database_models.py  test_evaluation_flow.py  test_evaluation_record_service.py  test_healthcheck.py  test_llm_service.py  test_rate_limit.py  test_report_service.py  test_rule_engine.py  test_submission_api.py  test_teacher_review_api.py  test_websocket_events.py  test_xml_parser.py
backend/tests/fixtures/: sample_blockly.xml
docs/: deployment-runbook.md  student-ai-grading-system-spec.md
frontend/: index.html  package-lock.json  package.json
markdown/: Chapter01_硬體及開發環境簡介.md  Chapter02_基礎感測模組.md  Chapter03_進階感測模組.md  Chapter05_WiF物聯網.md  (+1 more)
(+163 files in other folders)
