[project]
name = "student-ai-grading-backend"
version = "0.1.0"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pytest>=9.0",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "psycopg[binary]>=3.2",
  "supabase>=2.5",
  "google-genai>=0.5",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
pythonpath = ["."]
testpaths = ["tests"]
